--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^5.0.0
   google_nav_bar: ^5.0.6
-
+  flutter_slidable: ^3.0.0 
+  intl: ^0.18.0
+  flutter_svg: 2.0.17
   isar: ^3.1.0  # Hoặc phiên bản mới nhất
   isar_flutter_libs: ^3.1.0  # Để sử dụng Isar trên Flutter
   path_provider: ^2.0.0
+  action_slider: ^0.7.0
 
 dev_dependencies:
   flutter_test:
