--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0  # Để sử dụng Isar trên Flutter
   path_provider: ^2.0.0
   action_slider: ^0.7.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
