--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   path_provider: ^2.0.0
   action_slider: ^0.7.0
   provider: ^6.0.5
-
+  curved_navigation_bar: ^1.0.6 #latest version
+  floating_bottom_bar: ^0.0.3
+  lottie: ^2.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
