--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   curved_navigation_bar: ^1.0.6 #latest version
   floating_bottom_bar: ^0.0.3
   lottie: ^2.7.0
+  firebase_auth: ^5.0.0
+  ionicons: ^0.1.2
+  cloud_firestore: ^5.6.6
+  connectivity_plus: ^6.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
