--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   intl: ^0.18.0
   flutter_svg: 2.0.17
   isar: ^3.1.0  # Hoặc phiên bản mới nhất
-  isar_flutter_libs: ^3.1.0  # Để sử dụng Isar trên Flutter
+  isar_flutter_libs: ^3.1.0+3  # Để sử dụng Isar trên Flutter
   path_provider: ^2.0.0
   action_slider: ^0.7.0
   provider: ^6.0.5
@@ -51,7 +51,10 @@ dependencies:
   ionicons: ^0.1.2
   cloud_firestore: ^5.6.6
   connectivity_plus: ^6.1.3
-  
+  flutter_staggered_animations: ^1.1.0
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
