--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.0
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
-
+  shared_preferences: ^2.2.2 
 
 
 
