--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,11 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
   shared_preferences: ^2.2.2 
-
-
+  table_calendar: ^3.0.9
+  flutter_heatmap_calendar: ^1.0.5
+  chat_bubbles: ^1.5.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
