--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.4.5
   flutter_launcher_icons: "^0.14.3"
-
+  firebase_database: ^11.3.6
+  mocktail: ^1.0.0 # Hoặc mockito nếu bạn quen dùng
 flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
